public/stylesheets/style.css
body,
html {
  font-family: "Roboto", sans-serif;
}

.wd6international {
  color: #000066;
  line-height: 100px;
}

.cart-button {
  background-color: #000066;
  border-color: #000066;
  -webkit-transition: background 0.3s linear;
  transition: background 0.3s linear;
}
.cart-button:hover {
  background-color: #2d9cdb;
}

.btn-round {
  border-radius: 60px;
}

.page-header {
  background-color: #000066;
  width: 100%;
  height: 20px;
}

.card .price {
  font-weight: bold;
}

.main-content {
  padding-top: 2rem;
}

.row-spacing {
  padding-top: 1rem;
}

html [type="button"] {
  -webkit-appearance: initial;
}

.list-group-item {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
}

.color-white {
  color: #fff !important;
}

.btn-social > :first-child {
  top: 5px !important;
}

.social-seperator {
  font-weight: bold;
  padding: 0.5rem;
  margin-bottom: 0;
}

.change-auth {
  margin-top: 0.5rem;
}

select.col-sm-2 {
  max-width: initial;
}

